Project2/y.output
Nonterminals useless in grammar

   FactorList
   FactorListInner
   FieldDeclLoop
   SimpleExpressionList2


Rules useless in parser due to conflicts

   14 MethodDeclLoop2: %empty


State 11 conflicts: 1 shift/reduce
State 15 conflicts: 2 shift/reduce
State 16 conflicts: 1 shift/reduce, 1 reduce/reduce
State 17 conflicts: 1 shift/reduce, 1 reduce/reduce
State 41 conflicts: 2 reduce/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program EOFnum

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop

    2 ClassDeclLoop: ClassDeclLoop ClassDecl
    3              | ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum Decls RBRACEnum
    6          | LBRACEnum RBRACEnum
    7          | LBRACEnum Decls MethodDeclLoop RBRACEnum

    8 Decls: DECLARATIONnum DeclsLoop ENDDECLARATIONSnum
    9      | %empty

   10 DeclsLoop: DeclsLoop FieldDecl
   11          | FieldDecl

   12 MethodDeclLoop: MethodDeclLoop MethodDecl
   13               | MethodDeclLoop2

   14 MethodDeclLoop2: %empty
   15                | MethodDecl

   16 MethodDecl: METHODnum VOIDnum IDnum LPARENnum FormalParameterListNoType RPARENnum Block
   17           | METHODnum Type IDnum LPARENnum FormalParameterListWithType RPARENnum Block

   18 FieldDecl: Type FieldDeclInner SEMInum

   19 FormalParameterListNoType: %empty
   20                          | FormalParameterListLoopWithVal
   21                          | FormalParameterListLoopNoVal

   22 FormalParameterListWithType: %empty
   23                            | FormalParameterListLoopWithVal
   24                            | FormalParameterListLoopNoVal

   25 FormalParameterListLoopWithVal: VALnum INTnum IDnum
   26                               | VALnum INTnum IDnum SEMInum FormalParameterListLoopWithVal
   27                               | VALnum INTnum IDnum SEMInum FormalParameterListLoopNoVal
   28                               | VALnum INTnum IDnum COMMAnum ValLoop
   29                               | VALnum INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopWithVal
   30                               | VALnum INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopNoVal

   31 FormalParameterListLoopNoVal: INTnum IDnum
   32                             | INTnum IDnum SEMInum FormalParameterListLoopWithVal
   33                             | INTnum IDnum SEMInum FormalParameterListLoopNoVal
   34                             | INTnum IDnum COMMAnum ValLoop
   35                             | INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopNoVal
   36                             | INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopWithVal

   37 Type: INTnum BrackLoop
   38     | IDnum BrackLoop
   39     | INTnum TypeList
   40     | IDnum TypeList
   41     | IDnum TypeList DOTnum Type
   42     | INTnum TypeList DOTnum Type
   43     | IDnum
   44     | INTnum

   45 TypeList: LBRACnum RBRACnum
   46         | TypeList LBRACnum RBRACnum
   47         | %empty

   48 ValLoop: IDnum COMMAnum ValLoop
   49        | IDnum

   50 Block: StatementList
   51      | Decls StatementList

   52 StatementList: LBRACEnum StatementLoop RBRACEnum

   53 StatementLoop: Statement
   54              | StatementLoop SEMInum Statement

   55 Statement: %empty
   56          | AssignmentStatement
   57          | MethodCallStatement
   58          | ReturnStatement
   59          | IfStatement
   60          | WhileStatement

   61 FieldDeclInner: FieldDeclLoop2
   62               | FieldDeclInner COMMAnum FieldDeclLoop2

   63 FieldDeclLoop2: VariableDeclId
   64               | VariableDeclId EQUALnum VariableInitializer

   65 VariableDeclId: IDnum
   66               | IDnum BrackLoop

   67 BrackLoop: LBRACnum RBRACnum
   68          | BrackLoop LBRACnum RBRACnum

   69 VariableInitializer: Expression
   70                    | ArrayIntializer
   71                    | ArrayCreationExpression

   72 ArrayIntializer: LBRACEnum VariableInitializerLoop RBRACEnum

   73 VariableInitializerLoop: VariableInitializer
   74                        | VariableInitializerLoop COMMAnum VariableInitializer

   75 ArrayCreationExpression: INTnum ArrayCreationExpressionLoop

   76 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop ArrayCreationExpressionLoop2
   77                            | ArrayCreationExpressionLoop2

   78 ArrayCreationExpressionLoop2: LBRACnum Expression RBRACnum

   79 AssignmentStatement: Variable ASSGNnum Expression

   80 MethodCallStatement: Variable LPARENnum ExpressionLoop RPARENnum

   81 ExpressionLoop: Expression
   82               | Expression COMMAnum ExpressionLoop
   83               | %empty

   84 Expression: SimpleExpression
   85           | SimpleExpression LTnum SimpleExpression
   86           | SimpleExpression LEnum SimpleExpression
   87           | SimpleExpression EQnum SimpleExpression
   88           | SimpleExpression NEnum SimpleExpression
   89           | SimpleExpression GTnum SimpleExpression
   90           | SimpleExpression GEnum SimpleExpression

   91 Factor: UnsignedConstant
   92       | Variable
   93       | MethodCallStatement
   94       | LPARENnum Expression RPARENnum
   95       | NOTnum Factor

   96 Term: Factor
   97     | Factor ANDnum Term
   98     | Factor DIVIDEnum Term
   99     | Factor TIMESnum Term

  100 UnsignedConstant: ICONSTnum
  101                 | SCONSTnum

  102 SimpleExpression: SimpleExpressionList
  103                 | PLUSnum SimpleExpressionList
  104                 | MINUSnum SimpleExpressionList

  105 SimpleExpressionList: Term
  106                     | SimpleExpressionList PLUSnum Term
  107                     | SimpleExpressionList MINUSnum Term
  108                     | SimpleExpressionList ORnum Term

  109 Variable: IDnum
  110         | IDnum VariableLoop

  111 VariableLoop: VariableLoop DOTnum IDnum
  112             | DOTnum IDnum
  113             | LBRACnum Expression ExpressionLoop RBRACnum
  114             | VariableLoop LBRACnum Expression ExpressionLoop RBRACnum

  115 ReturnStatement: RETURNnum
  116                | RETURNnum Expression

  117 IfStatement: IFnum Expression StatementList
  118            | IfStatement ELSEnum IFnum Expression StatementList
  119            | IfStatement ELSEnum StatementList

  120 WhileStatement: WHILEnum Expression StatementList


Terminals, with rules where they appear

EOFnum (0) 0
error (256)
DECLARATIONnum (258) 8
ASSGNnum (259) 79
PROGRAMnum (260) 1
IDnum (261) 1 4 16 17 25 26 27 28 29 30 31 32 33 34 35 36 38 40 41
    43 48 49 65 66 109 110 111 112
SEMInum (262) 1 18 26 27 29 30 32 33 35 36 54
ANDnum (263) 97
DOTnum (264) 41 42 111 112
ENDDECLARATIONSnum (265) 8
EQUALnum (266) 64
GTnum (267) 89
INTnum (268) 25 26 27 28 29 30 31 32 33 34 35 36 37 39 42 44 75
LBRACnum (269) 45 46 67 68 78 113 114
LPARENnum (270) 16 17 80 94
METHODnum (271) 16 17
NEnum (272) 88
ORnum (273) 108
RBRACnum (274) 45 46 67 68 78 113 114
RPARENnum (275) 16 17 80 94
VALnum (276) 25 26 27 28 29 30
WHILEnum (277) 120
CLASSnum (278) 4
COMMAnum (279) 28 29 30 34 35 36 48 62 74 82
DIVIDEnum (280) 98
ELSEnum (281) 118 119
EQnum (282) 87
GEnum (283) 90
ICONSTnum (284) 100
IFnum (285) 117 118
LBRACEnum (286) 5 6 7 52 72
LEnum (287) 86
LTnum (288) 85
MINUSnum (289) 104 107
NOTnum (290) 95
PLUSnum (291) 103 106
RBRACEnum (292) 5 6 7 52 72
RETURNnum (293) 115 116
SCONSTnum (294) 101
TIMESnum (295) 99
VOIDnum (296) 16


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDeclLoop (44)
    on left: 2 3, on right: 1 2
ClassDecl (45)
    on left: 4, on right: 2 3
ClassBody (46)
    on left: 5 6 7, on right: 4
Decls (47)
    on left: 8 9, on right: 5 7 51
DeclsLoop (48)
    on left: 10 11, on right: 8 10
MethodDeclLoop (49)
    on left: 12 13, on right: 7 12
MethodDeclLoop2 (50)
    on left: 14 15, on right: 13
MethodDecl (51)
    on left: 16 17, on right: 12 15
FieldDecl (52)
    on left: 18, on right: 10 11
FormalParameterListNoType (53)
    on left: 19 20 21, on right: 16
FormalParameterListWithType (54)
    on left: 22 23 24, on right: 17
FormalParameterListLoopWithVal (55)
    on left: 25 26 27 28 29 30, on right: 20 23 26 29 32 36
FormalParameterListLoopNoVal (56)
    on left: 31 32 33 34 35 36, on right: 21 24 27 30 33 35
Type (57)
    on left: 37 38 39 40 41 42 43 44, on right: 17 18 41 42
TypeList (58)
    on left: 45 46 47, on right: 39 40 41 42 46
ValLoop (59)
    on left: 48 49, on right: 28 29 30 34 35 36 48
Block (60)
    on left: 50 51, on right: 16 17
StatementList (61)
    on left: 52, on right: 50 51 117 118 119 120
StatementLoop (62)
    on left: 53 54, on right: 52 54
Statement (63)
    on left: 55 56 57 58 59 60, on right: 53 54
FieldDeclInner (64)
    on left: 61 62, on right: 18 62
FieldDeclLoop2 (65)
    on left: 63 64, on right: 61 62
VariableDeclId (66)
    on left: 65 66, on right: 63 64
BrackLoop (67)
    on left: 67 68, on right: 37 38 66 68
VariableInitializer (68)
    on left: 69 70 71, on right: 64 73 74
ArrayIntializer (69)
    on left: 72, on right: 70
VariableInitializerLoop (70)
    on left: 73 74, on right: 72 74
ArrayCreationExpression (71)
    on left: 75, on right: 71
ArrayCreationExpressionLoop (72)
    on left: 76 77, on right: 75 76
ArrayCreationExpressionLoop2 (73)
    on left: 78, on right: 76 77
AssignmentStatement (74)
    on left: 79, on right: 56
MethodCallStatement (75)
    on left: 80, on right: 57 93
ExpressionLoop (76)
    on left: 81 82 83, on right: 80 82 113 114
Expression (77)
    on left: 84 85 86 87 88 89 90, on right: 69 78 79 81 82 94 113
    114 116 117 118 120
Factor (78)
    on left: 91 92 93 94 95, on right: 95 96 97 98 99
Term (79)
    on left: 96 97 98 99, on right: 97 98 99 105 106 107 108
UnsignedConstant (80)
    on left: 100 101, on right: 91
SimpleExpression (81)
    on left: 102 103 104, on right: 84 85 86 87 88 89 90
SimpleExpressionList (82)
    on left: 105 106 107 108, on right: 102 103 104 106 107 108
Variable (83)
    on left: 109 110, on right: 79 80 92
VariableLoop (84)
    on left: 111 112 113 114, on right: 110 111 114
ReturnStatement (85)
    on left: 115 116, on right: 58
IfStatement (86)
    on left: 117 118 119, on right: 59 118 119
WhileStatement (87)
    on left: 120, on right: 60


State 0

    0 $accept: . Program EOFnum

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDeclLoop

    IDnum  shift, and go to state 3


State 2

    0 $accept: Program . EOFnum

    EOFnum  shift, and go to state 4


State 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDeclLoop

    SEMInum  shift, and go to state 5


State 4

    0 $accept: Program EOFnum .

    $default  accept


State 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDeclLoop

    CLASSnum  shift, and go to state 6

    ClassDeclLoop  go to state 7
    ClassDecl      go to state 8


State 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


State 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop .
    2 ClassDeclLoop: ClassDeclLoop . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


State 8

    3 ClassDeclLoop: ClassDecl .

    $default  reduce using rule 3 (ClassDeclLoop)


State 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


State 10

    2 ClassDeclLoop: ClassDeclLoop ClassDecl .

    $default  reduce using rule 2 (ClassDeclLoop)


State 11

    5 ClassBody: LBRACEnum . Decls RBRACEnum
    6          | LBRACEnum . RBRACEnum
    7          | LBRACEnum . Decls MethodDeclLoop RBRACEnum

    DECLARATIONnum  shift, and go to state 13
    RBRACEnum       shift, and go to state 14

    RBRACEnum  [reduce using rule 9 (Decls)]
    $default   reduce using rule 9 (Decls)

    Decls  go to state 15


State 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


State 13

    8 Decls: DECLARATIONnum . DeclsLoop ENDDECLARATIONSnum

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    DeclsLoop  go to state 18
    FieldDecl  go to state 19
    Type       go to state 20


State 14

    6 ClassBody: LBRACEnum RBRACEnum .

    $default  reduce using rule 6 (ClassBody)


State 15
